# ptex-bind

./: .clang-format  .gitignore  Cargo.toml  README.md  bind.sh  build.rs  garden.yaml  test.rs
.github/workflows/: ci.yaml
bind/: c-ptex_half.cpp  c-ptexture.cpp  std_string.cpp
ptex-rs/: Cargo.toml
ptex-rs/src/: error.rs  lib.rs  reader.rs  texture.rs  types.rs  writer.rs
ptex-rs/src/core/: error.rs  mod.rs
ptex-rs/tests/: reader.rs  writer.rs
ptex-sys/: Cargo.toml  README.md  build.rs
ptex-sys/src/: lib.rs  ptex-sys.h
ptex-sys/tests/: integration_test.rs
src/: error.rs  lib.rs  ptex-bind-bridge.h  reader.rs  sys.rs  texture.rs  types.rs  writer.rs
tests/: reader.rs  reader_test.rs  sys.rs  types_test.rs  writer.rs  writer_test.rs
tests/fixtures/: test.ptx
