[package]
name = "ptex"
version = "0.0.6"
description = "High-level Ptex bindings over ptex-sys"
documentation = "https://docs.rs/ptex"
authors = ["David Aguilar <davvid@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["gamedev", "graphics", "render", "texture", "vfx"]
categories = ["graphics", "rendering::data-formats"]
readme = "README.md"
homepage = "https://github.com/vfx-rs/ptex-bind"
repository = "https://github.com/vfx-rs/ptex-bind.git"

[workspace]
members = ["ptex-sys"]

[dependencies]
ptex-sys = { path = "ptex-sys", version = "0.0.6" }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
assert_float_eq = "1"

# The docs are the same across all platforms so we only need to build once.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustc-args = ["--cfg", "docsrs"]
