[package]
name = "ptex"
version = "0.3.0-beta0"
edition = "2021"
description = "High-level Ptex bindings over ptex-sys"
documentation = "https://docs.rs/ptex"
authors = ["David Aguilar <davvid@gmail.com>"]
license = "Apache-2.0"
keywords = ["gamedev", "graphics", "render", "texture", "vfx"]
categories = ["graphics", "multimedia", "multimedia::images", "rendering", "rendering::data-formats"]
readme = "README.md"
homepage = "https://github.com/vfx-rs/ptex-bind"
repository = "https://github.com/vfx-rs/ptex-bind.git"

[workspace]
members = ["ptex-sys"]

[dependencies]
cxx = { version = "1.0", features = ["c++17"] }
half = "2.3.1"
ptex-sys = {path = "ptex-sys", version = "0.3.0-beta0"}
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
assert_float_eq = "1.0"

# The docs are the same across all platforms so we only need to build once.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustc-args = ["--cfg", "docsrs"]
