[package]
name = "ptex"
version = "0.0.6"
edition = "2021"
authors = ["David Aguilar <davvid@gmail.com>"]
description = "High-level Ptex bindings over ptex-sys"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
assert_float_eq = "1"
# ptex-sys = {path = "../ptex-sys"}
ptex-sys = "0.0.6"
thiserror = "1.0"

# The docs are the same across all platforms so we only need to build once.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustc-args = ["--cfg", "docsrs"]
