[package]
name = "ptex-sys"
version = "0.3.0-beta0"
edition = "2021"
description = "Rust sys bindings for Ptex https://github.com/wdas/ptex"
documentation = "https://docs.rs/ptex-sys"
authors = ["David Aguilar <davvid@gmail.com>"]
license = "Apache-2.0"
keywords = ["gamedev", "graphics", "render", "texture", "vfx"]
categories = ["graphics", "rendering::data-formats"]
readme = "README.md"
homepage = "https://github.com/vfx-rs/ptex-bind"
repository = "https://github.com/vfx-rs/ptex-bind.git"
links = "Ptex"

[dependencies]
cxx = { version = "1.0", features = ["c++17"] }

[build-dependencies]
anyhow = "1.0"
cxx-build = "1.0"
pkg-config = "0.3.27"

# The docs are the same across all platforms so we only need to build once.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustc-args = ["--cfg", "docsrs"]
